--- a/.monaca/project_info.json
+++ b/.monaca/project_info.json
@@ -12,13 +12,14 @@
         "cordova-custom-config@2.0.3",
         "cordova-plugin-inappbrowser@1.7.1"
     ],
-    "title-ja": "てすと",
+    "title-ja": "",
     "title-en": "",
     "description-ja": "",
     "description-en": "",
     "category": "User Template",
     "platform": [
-        "winrt"
+        "android",
+        "ios"
     ],
-    "name": "generated-1512563710-5a267b17e78885dd658b456c"
+    "name": "generated-1513154864-5a2a1694e78885fd398b4567"
 }
